--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
-fastapi
-uvicorn
-pillow
-pillow-heif
-tqdm
-pyicloud
+fastapi==0.104.1
+uvicorn==0.24.0
+pyicloud==0.10.2
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+firebase-admin==6.2.0
+pydantic==2.4.2
+python-dotenv==1.0.0
+pillow==10.1.0
+pillow-heif==0.13.1
+tqdm==4.66.1
