--- a/render.yaml
+++ b/render.yaml
@@ -4,11 +4,11 @@ services:
     env: python
     rootDir: backend
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
       - key: CORS_ORIGINS
-        value: https://votre-frontend-url.vercel.app
+        value: https://import-icloud-frontend.vercel.app/
       - key: FIREBASE_CREDENTIALS
         sync: false 
