--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,9 @@ services:
   - type: web
     name: icloud-importer-backend
     env: python
-    rootDir: backend
-    buildCommand: cd backend && pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    rootDir: .
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
