--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,13 @@ services:
     name: icloud-importer-backend
     env: python
     rootDir: .
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: |
+      echo "Installing dependencies..."
+      pip install -r backend/requirements.txt
+    startCommand: |
+      echo "Starting application..."
+      cd backend
+      uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
