--- a/render.yaml
+++ b/render.yaml
@@ -3,16 +3,11 @@ services:
     name: icloud-importer-backend
     env: python
     rootDir: .
-    buildCommand: |
-      echo "Installing dependencies..."
-      pip install -r backend/requirements.txt
-    startCommand: |
-      echo "Starting application..."
-      cd backend
-      uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.0
+        value: 3.9.16
       - key: CORS_ORIGINS
         value: https://import-icloud-frontend.vercel.app/
       - key: FIREBASE_CREDENTIALS
