--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,9 @@ services:
     name: icloud-importer-backend
     env: python
     rootDir: .
-    buildCommand: pip install -r backend/requirements.txt
+    buildCommand: |
+      python --version
+      pip install -r backend/requirements.txt
     startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
