--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,23 @@
 services:
   - type: web
-    name: icloud-importer-backend
-    env: python
-    rootDir: .
-    buildCommand: |
-      python --version
-      pip install -r backend/requirements.txt
-    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
+    name: import-icloud-backend
+    env: docker
+    dockerfilePath: backend/Dockerfile
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.9.16
-      - key: CORS_ORIGINS
-        value: https://import-icloud-frontend.vercel.app/
       - key: FIREBASE_CREDENTIALS
-        sync: false 
+        sync: false
+      - key: FIREBASE_API_KEY
+        sync: false
+      - key: FIREBASE_AUTH_DOMAIN
+        sync: false
+      - key: FIREBASE_PROJECT_ID
+        sync: false
+      - key: FIREBASE_STORAGE_BUCKET
+        sync: false
+      - key: FIREBASE_MESSAGING_SENDER_ID
+        sync: false
+      - key: FIREBASE_APP_ID
+        sync: false
+      - key: FIREBASE_MEASUREMENT_ID
+        sync: false
+    rootDir: backend 
